force-app/main/default/objects/Resource_Changes_Notification__e/Resource_Changes_Notification__e.object-meta.xml
<CustomObject>
    <label>Resource Changes Notification</label>
    <pluralLabel>Resource Changes Notifications</pluralLabel>
</CustomObject>