force-app/main/default/objects/Resource_Changes_Notification__e/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>