force-app/main/default/objects/Resource_Changes_Notification__e/fields/Receiver_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Receiver_User_Id__c</fullName>
    <label>Receiver User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>