force-app/main/default/objects/Resource_Changes_Notification__e/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <label>Resource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>