force-app/main/default/objects/Resource_Changes_Notification__e/fields/Resource_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Last_Name__c</fullName>
    <label>Resource Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>